data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_0.wast
;; 1. **Test for Out-of-Bounds Index Handling**:    - Test a `br_table` with an index that is significantly larger than the number of available targets inside a block.    - *Constraint*: Ensures that the `br_table` instruction correctly handles large out-of-bounds indices, avoiding undefined behavior.    - *Relation*: Tests if the label stack management correctly identifies out-of-bounds and raises appropriate errors or defaults to a defined fallback behavior.

(module)
(assert_invalid
  (module (func (result i32)
    (block (result i32)
      (br_table 0 1 2 3 (i32.const 0))
      (i32.const 42)
    )
  ))
  "out of bounds br_table index"
)
